add isAdmin field
